Some info and images

--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Hello, world!
+<!DOCTYPE html>
+<html lang=en>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Vivian Ding</title>
+	<link rel="icon" type="image/png" href="images/icon.png" />
+	<link rel="stylesheet" type="text/css" href="styles.css" />
+</head>
+
+<body> <br>
+	<div class="img"><img src="images/profile.png" width=300px></div>
+	<div class="txt">
+	<h1>Vivian Ding</h1>
+	<ul>
+		<li>vyd2 (at) cornell (dot) edu</li>
+		<li>CS & Math Undergraduate, Cornell University</li>
+	</ul>
+	<ul>
+		<li><a href="https://github.com/vivianyyd">Github</a></li>
+		<li><a href="https://linkedin.com/in/vivianyyd">LinkedIn</a></li>
+		<li><a href="https://twitter.com/vivianyyd">Twitter</a></li>
+	</ul>
+	
+	<h2>Coursework</h2>
+	<p>
+	<table>
+		<tr><td>CS 3110</td> <td>Functional Programming and Data Structures</td></tr>
+		<tr><td>CS 4120</td> <td>Introduction to Compilers</td></tr>
+		<tr><td>CS 4220</td> <td>Numerical Analysis: Linear and Nonlinear Problems</td></tr>
+		<tr><td>CS 4810</td> <td>Theory of Computing</td></tr>
+		<tr><td>CS 4820</td> <td>Introduction to Analysis of Algorithms</td></tr>
+		<tr><td>Math 4130</td> <td>Honors Introduction to Analysis</td></tr>
+	</table>
+	</div>
+</body>
+</html>
