--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<li>CS & Math Undergraduate, Cornell University</li>
 	</ul>
 	<ul>
+		<li><a href="cv.pdf">CV (updated 2022-06-05)</a></li>
 		<li><a href="https://github.com/vivianyyd">Github</a></li>
 		<li><a href="https://linkedin.com/in/vivianyyd">LinkedIn</a></li>
 		<li><a href="https://twitter.com/vivianyyd">Twitter</a></li>
