--- a/index.html
+++ b/index.html
@@ -18,20 +18,29 @@
 	</ul>
 	<ul>
 		<li><a href="cv.pdf">CV (updated 2022-06-05)</a></li>
-		<li><a href="https://github.com/vivianyyd">Github</a></li>
-		<li><a href="https://linkedin.com/in/vivianyyd">LinkedIn</a></li>
-		<li><a href="https://twitter.com/vivianyyd">Twitter</a></li>
+<!-- 		<li><a href="quotes.html">Quotes</a></li> -->
+		<li>External: [<a href="https://github.com/vivianyyd">Github</a>]
+					  [<a href="https://linkedin.com/in/vivianyyd">LinkedIn</a>]
+					  [<a href="https://twitter.com/vivianyyd">Twitter</a>]</li>
 	</ul>
 	
 	<h2>Coursework</h2>
 	<p>
 	<table>
-		<tr><td>CS 3110</td> <td>Functional Programming and Data Structures</td></tr>
+<!-- 		<tr><td>CS 3110</td> <td>Functional Programming and Data Structures</td></tr> -->
 		<tr><td>CS 4120</td> <td>Introduction to Compilers</td></tr>
 		<tr><td>CS 4220</td> <td>Numerical Analysis: Linear and Nonlinear Problems</td></tr>
+		<tr><td>CS 4410</td> <td>Operating Systems</td></tr>
 		<tr><td>CS 4810</td> <td>Theory of Computing</td></tr>
-		<tr><td>CS 4820</td> <td>Introduction to Analysis of Algorithms</td></tr>
+<!-- 		<tr><td>CS 4820</td> <td>Introduction to Analysis of Algorithms</td></tr> -->
+		<tr><td>CS 4830</td> <td>Introduction to Cryptography</td></tr>
+		<tr><td>CS 6820</td> <td>Graduate Analysis of Algorithms</td></tr>
+		<tr><td>CS 6110</td> <td>Advanced Programming Languages</td></tr>
+		<tr><td>CS 7190</td> <td>Seminar in Programming Languages and Compilers</td></tr>
+		<tr><td>Math 3340</td> <td>Abstract Algebra</td></tr>
 		<tr><td>Math 4130</td> <td>Honors Introduction to Analysis</td></tr>
+		<tr><td>Math 4330</td> <td>Honors Linear Algebra</td></tr>
+		<tr><td>Math 4410</td> <td>Introduction to Combinatorics I</td></tr>
 	</table>
 	</div>
 </body>
