Add username note

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 		<li><a href="cv.pdf">CV (updated 2024-03-20)</a></li>
 		<li>External: [<a href="https://github.com/vivianyyd">Github</a>]
 					  [<a href="https://linkedin.com/in/vivianyyd">LinkedIn</a>]
-					  [<a href="https://twitter.com/vivianyyd">Twitter</a>]</li>
+					  [<a href="https://twitter.com/vivianyyd">Twitter</a>]
+        </li>
+        <li>&emsp; (@vivianyyd almost anywhere)</li>
 	</ul>
 	
     <p>
