New bio update just dropped

--- a/index.html
+++ b/index.html
@@ -13,25 +13,26 @@
 	<div class="txt">
 	<h1>Vivian Ding</h1>
 	<ul>
-		<li>vyd2 (at) cornell (dot) edu</li>
-		<li>CS & Math Undergraduate, Cornell University</li>
+		<li>CS & Math Undergrad at Cornell</li>
+		<li>Soon-to-be PhD student at MIT</li>
 	</ul>
 	<ul>
-		<li><a href="cv.pdf">CV (updated 2024-03-20)</a></li>
+        <li>vyd2 (at) cornell (dot) edu</li>
 		<li>External: [<a href="https://github.com/vivianyyd">Github</a>]
 					  [<a href="https://linkedin.com/in/vivianyyd">LinkedIn</a>]
 					  [<a href="https://twitter.com/vivianyyd">Twitter</a>]
         </li>
         <li>&emsp; (@vivianyyd almost anywhere)</li>
 	</ul>
+    <ul>
+		<li><a href="cv.pdf">CV (updated 2024-03-20)</a></li>
+    </ul>
 	
     <p>
     I'm interested in programming languages and program synthesis. 
-    </p>
-	
-    <p>
-    Currently thinking about <a href="https://github.com/vivianyyd/s4s">synthesizing specifications</a>.
+    Currently thinking about synthesizing specifications</a>.
     </p>
 	</div>
 </body>
 </html>
+
