--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
 	<div class="txt">
 	<h1>Vivian Ding</h1>
 	<ul>
-		<li>CS & Math Undergrad at Cornell</li>
-		<li>Soon-to-be PhD student at MIT</li>
+		<li>PhD student at MIT</li>
 	</ul>
 	<ul>
         <li>vyd2 (at) cornell (dot) edu</li>
-		<li>External: [<a href="https://github.com/vivianyyd">Github</a>]
-					  [<a href="https://linkedin.com/in/vivianyyd">LinkedIn</a>]
-					  [<a href="https://twitter.com/vivianyyd">Twitter</a>]
+		<li>[<a href="https://github.com/vivianyyd">Github</a>]
+		  [<a href="https://linkedin.com/in/vivianyyd">LinkedIn</a>]
+		  [<a href="https://twitter.com/vivianyyd">Twitter</a>]
         </li>
         <li>&emsp; (@vivianyyd almost anywhere)</li>
 	</ul>
@@ -30,7 +29,7 @@
 	
     <p>
     I'm interested in programming languages and program synthesis. 
-    Currently thinking about synthesizing specifications</a>.
+    Currently thinking about synthesizing specifications.
     </p>
 	</div>
 </body>
